Fix team container size on mobile

--- a/app/css/main.sass
+++ b/app/css/main.sass
@@ -420,7 +420,7 @@ $team-bottom-padding: 45px
 
 .team-container
   @extend .grid
-  height: 236px + $team-top-padding + $team-bottom-padding
+  height: 286px + $team-top-padding + $team-bottom-padding
   position: relative
   @media #{$media-ipad}
     height: auto
